# SpokenDigits

./: .gitignore  DataExploration.ipynb  ProjectDescription.ipynb  README.md  SolutionNotebook.ipynb  pyproject.toml  requirements.txt
comparative_analysis/: statistical_significance_test.py  tsne_model_embeddings.py
model_baseline/: data_loading.py  linear_model.joblib  linear_model.py  mel_spectogram.py
model_neural/: classification_report.py  contrastive_learning_classification_report.py  contrastive_training.py  conv1d_model.py  data_augmentation_classification_report.py  data_loading.py  single_speaker_classification_report.py  transformer_model.py
model_neural/models/: Conv1dMelModel_0008_0001_20_02.pt  Conv1dMelModel_contrast_transform.pt  Conv1dMelModel_contrastive.pt  Conv1dMelModel_frequency_mask.pt  Conv1dMelModel_single_speaker.pt  Conv1dModel_0002_0002_10_01.pt  LogisticRegression_contrastive.pt  TransformerModel.pt  TransformerModel_00001_00001_15_001.pt  TransformerModel_single_speaker.pt  conv1d_model.pt
model_neural/utils/: classification_report.py  data_loading.py  helpers.py
tests/integration_tests/: load_data_from_dataset.py
tests/model_baseline/: test_mel_spectogram.py
tests/unittests/model_baseline/: test_data_loading.py
tests/unittests/model_neural/: test_conv1d_model.py  test_data_loading.py
tests/unittests/model_neural/utils/: test_data_loading.py
unittests/model_baseline/: test_mel_spectogram.py
unittests/model_neural/: test_data_loading.py
