[tool.poetry]
name = "spokendigits"
version = "0.1.0"
description = ""
authors = ["Christian Singer <christian.singer@mail.schwarz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
scipy = "1.10.0"
matplotlib = "3.6.3"
ipython = "8.8.0"
pandas = "1.5.3"
scikit-learn = "1.2.1"
jupyter = "^1.0.0"
numpy = "1.23.4"
librosa = "0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
